# Cores-VeeR-EL2

./: .gitignore  .gitmodules  MAINTAINERS.md  Makefile  README.md  cm.cfg  config.ini  delete_pr_number.txt  index.html  module.sv  release-notes.md  requirements.txt  riscv-dv-update.patch  swerv_el2.core  violations.waiver
.github/: Dockerfile
compliance/: config.ini
configs/: README.md  swerv.config  swerv_config_gen.py  veer.config  veer_config_gen.py
design/: el2_dma_ctrl.sv  el2_lockstep_pkg.sv  el2_mem.sv  el2_mubi_pkg.sv  el2_pdef.vh  el2_pic_ctrl.sv  el2_pmp.sv  el2_swerv.sv  el2_swerv_wrapper.sv  el2_tmr_complex.sv  el2_veer.sv  el2_veer_lockstep.sv  el2_veer_wrapper.sv  flist  flist.formal  flist.lint  flist.questa
docs/: Makefile  requirements.txt  update_styles.sh
doctrees/: dev.doctree  environment.pickle  index.doctree  main.doctree
html/: .buildinfo  dev.html  genindex.html  index.html  main.html  objects.inv  searchindex.js
testbench/: SimJTAG.cc  SimJTAG.v  ahb_lite_2to1_mux.sv  ahb_lsu_dma_bridge.sv  ahb_sif.sv  dasm.svi  flist  icache_macros.svh  input.tcl  remote_bitbang.cc  tb_top.sv  (+5 more)
tools/SiteSpawner/: README.md  pyproject.toml
tools/SiteSpawner/src/sitespawner/: __init__.py  common.py  convert_data.py  gen_coverage_report.py  generate.py  genhtml.py  update_style.py  update_webpage.py
tools/SiteSpawner/template/: redirect.html
tools/SiteSpawner/template/coverage_report/: coverage_report.html  main_table.html  src_view.html  summary_table.html
tools/SiteSpawner/template/webpage/: conf.py  coverage_dashboard.md  dev.md  main.md
(+81022 files in other folders)
