[build-system]
requires = ["setuptools >= 65", "wheel >= 0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "SiteSpawner"
authors = [
    { name = "Antmicro" }
]

description = "Project website generator, embeding RTL coverage reports."
requires-python = ">=3.8"
version = "0.0.1"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
    "antmicro-sphinx-utils @ git+https://github.com/antmicro/antmicro-sphinx-utils.git",
    "beautifulsoup4",
    "coloredlogs",
    "gitpython",
    "jinja2",
    "myst-parser",
    "sphinx < 8.0.0",
    "sphinx_tabs",
    "sphinx-immaterial",
    "sphinxcontrib-mermaid",
    "termcolor",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["template", "styles", "sitespawner"]

[tool.setuptools.package-data]
"template" = ["coverage_report/*", "webpage/*", "*.html"]
"styles" = ["*", "assets/*"]


[project.scripts]
sis = 'sitespawner.__init__:main'

[project.optional-dependencies]
dev = [
    "black",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3
